<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculadora"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/etOperando1"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sEOperando1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <EditText
        android:id="@+id/etOperando2"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/sEOperando2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOperando1"
        android:autofillHints="" />

    <!--<Button
        android:id="@+id/bSumar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:onClick="sumar"
        android:text="@string/sumar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOperando2" />-->

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="52dp"
        android:text="@string/sEResultado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!--app:layout_constraintTop_toBottomOf="@+id/bSumar"/>-->
    />

    <!--<Button
        android:id="@+id/bRestar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:onClick="restar"
        android:text="@string/restar"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/bSumar"
        app:layout_constraintTop_toBottomOf="@+id/etOperando2" />-->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="110dp"
        android:layout_height="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbEspa"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="traducir"
            android:text="@string/epanol" />

        <RadioButton
            android:id="@+id/rbAle"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="traducir"
            android:text="@string/deutsch" />

        <RadioButton
            android:id="@+id/rbKurdo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="traducir"
            android:text="@string/kurd" />

        <RadioButton
            android:id="@+id/rbJapo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="traducir"
            android:text="@string/日本" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spOpciones"
        android:layout_width="208dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bCalcular"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="3dp"
        android:onClick="CogerOpcion"
        android:text="@string/sECalcular"
        app:layout_constraintBottom_toTopOf="@+id/tvResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOperando2"
        app:layout_constraintVertical_bias="0.576" />

    <!---
    <Button
        android:id="@+id/bCambiarIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="44dp"
        android:onClick="traducir"
        android:text="CHANGE LANGUAGE"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent" />
    -->
</android.support.constraint.ConstraintLayout>